--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -18,6 +18,10 @@ what's here to work the way you'd like it to.
 
 /* Variables
 /* ---------------------------------------------------------- */
+@font-face {
+    font-family: 'SerpentineMedium';
+    src: url('./serpentine.woff2');
+ }
 
 :root {
 
@@ -30,7 +34,7 @@ what's here to work the way you'd like it to.
 
     /* Fonts */
     --font-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    --font-serif: Georgia, Times, serif;
+    --font-serif: 'SerpentineMedium', sans-serif;
     --font-mono: Menlo, Courier, monospace;
     --font-light: 100;
     --font-normal: 400;
@@ -188,6 +192,7 @@ dfn {
 h1 {
     margin: 0.67em 0;
     font-size: 2em;
+    font-family: var(--font-serif);
 }
 small {
     font-size: 80%;
@@ -539,7 +544,7 @@ h6 {
 .content-body {
     display: flex;
     flex-direction: column;
-    font-family: var(--font-serif);
+    font-family: var(--font-sans-serif);
 }
 
 .post-full-content {
@@ -578,6 +583,7 @@ h6 {
 .content-title {
     margin: 0 0 0.8em;
     font-size: 5rem;
+    font-family: var(--font-serif);
 }
 @media (max-width: 500px) {
     .content-title {
@@ -711,6 +717,7 @@ h6 {
     margin: 0 auto;
     padding: 10vw 0;
     text-align: center;
+    text-shadow: 2px 2px 1px rgba(0,0,0,0.8);
 }
 
 .site-banner-title {
@@ -719,6 +726,7 @@ h6 {
     color: #fff;
     font-size: 4rem;
     line-height: 1.3em;
+    font-family: var(--font-serif);
 }
 
 .site-banner-desc {
@@ -769,17 +777,16 @@ h6 {
     display: grid;
     justify-content: space-between;
     grid-gap: 30px;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
 }
-
-@media (max-width: 980px) {
+@media (min-width: 740px) {
     .post-feed {
         grid-template-columns: 1fr 1fr;
     }
 }
-@media (max-width: 680px) {
+@media (min-width: 1200px) {
     .post-feed {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
@@ -803,6 +810,8 @@ h6 {
 .post-card-title {
     margin: 0 0 10px 0;
     padding: 0;
+    font-family: var(--font-serif);
+    letter-spacing: 0.6px;
 }
 
 .post-card-excerpt {
